Carousel and table scaling added. Image blocks started

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
                 <p>Responsive design using Twitter bootstrap</p>
                 <button class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Learn more &raquo;</button>
             </div>
-
             <div class="row">
-                <div class="span8">Phasellus eget pharetra nunc. Phasellus et rutrum ipsum. Lenas a lobortis justo. Proin tempus ipsum eu turpis cursus, ut commodo turpis luctus. Nunc egestas arcu turpis, vel varius neque tempus ac. Donec eget erat ornare risus convallis aliquet sed ac lectus.
+                <div class="span8" style="margin-left: 19px;">Phasellus eget pharetra nunc. Phasellus et rutrum ipsum. Lenas a lobortis justo. Proin tempus ipsum eu turpis cursus, ut commodo turpis luctus. Nunc egestas arcu turpis, vel varius neque tempus ac. Donec eget erat ornare risus convallis aliquet sed ac lectus.
 
                     Phasellus eget pharetra nunc. Phasellus et rutrum ipsum. Aliquam pellentesque tempor egestas. Ut nec massa vel risus dapibus sodales. Sed erat enim, eleifend ut dolor at, congue dignissim nibh. Ut condimentum fringilla magna, nec ornare sem cursus id. Pellentesque nec quam ligula. Nunc sed urna venenatis, fermentum ligula non, interdum nibh. Donec nibh quam, feugiat in nulla ac, posuere sodales urna.
 
@@ -98,8 +97,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="span8">asd</div>
-                <div class="span3">asd</div>
+                <img src="img/divider.gif" alt="" style="width: 100%; margin-top: 10px; height: 10px;" />
+            </div>
+            <div id="middle-images">
+                <div id="left-image"></div>
+                <div id="middle-image"></div>
+                <div id="right-image"></div>
             </div>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
