Simple image slides added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="hero-unit">
+            <div class="hero-unit" id="main">
                 <h1>Homepage for the HTML5 course</h1>
                 <p>Responsive design using Twitter bootstrap</p>
                 <button class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Learn more &raquo;</button>
@@ -97,12 +97,48 @@
                 </div>
             </div>
             <div class="row">
-                <img src="img/divider.gif" alt="" style="width: 100%; margin-top: 10px; height: 10px;" />
+                <img src="img/fb_apps_mid.png" alt="" style="width: 100%; margin-top: 10px; margin-bottom: 20px;" />
             </div>
-            <div id="middle-images">
-                <div id="left-image"></div>
-                <div id="middle-image"></div>
-                <div id="right-image"></div>
+            <div id="middle-images-wrapper" class="span3">
+                <div id="left-image">
+                    <div class="inner-wrapper">
+                        <div class="top"></div>
+                        <div class="bottom">
+                            <p>Nulla quis condimentum nisi. Sed dapibus odio et magna facilisis hendrerit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla</p>
+                            <div class="buy-button">
+                                <p>
+                                   <button type="button" class="btn btn-success btn-lg">Buy now!</button>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="middle-image">
+                    <div class="inner-wrapper">
+                        <div class="top"></div>
+                        <div class="bottom">
+                            <p>Nulla quis condimentum nisi. Sed dapibus odio et magna facilisis hendrerit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla</p>
+                            <div class="buy-button">
+                                <p>
+                                   <button type="button" class="btn btn-success btn-lg">Buy now!</button>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="right-image">
+                    <div class="inner-wrapper">
+                        <div class="top"></div>
+                        <div class="bottom">
+                            <p>Nulla quis condimentum nisi. Sed dapibus odio et magna facilisis hendrerit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla</p>
+                            <div class="buy-button">
+                                <p>
+                                   <button type="button" class="btn btn-success btn-lg">Buy now!</button>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
